2011-12-14  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Update CLI and DB maintenance scripts
	  version strings.

2011-10-27  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Fixed a typo.

2011-10-27  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Include build number in the
	  Windows agent installer for nightly builds.

2011-10-27  Ramon Novoa  <rnovoa@artica.es>

	* build_src.sh: Create symlinks needed to build RPM packages.

2011-10-27  Ramon Novoa  <rnovoa@artica.es>

	* build_src.sh: Include build number in tarballs for nightly builds.

2011-10-27  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Include build number in deb package
	  names for nightly builds.

2011-10-11  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Update console build string.

2011-09-16  Sancho Lerena <slerena@artica.es>

        *  extras/build_src.sh: Fixed bad path.

2011-09-15  Sancho Lerena <slerena@artica.es>

	*  extras/build_src.sh: Missing PO files was breaking lang. system

	* aditional_rpmspec/wmic-4.0.0tp4-SVN-build-UNKNOWN.spec: Updated.

2011-09-01  SAncho Lerena <slerena@artica.es>

	* scripts/webserver/pandora_webserver.pl: Updated header.

2011-08-30  Juan Manuel Ramon Vigo <juanmanuel.ramon@artica.es>

	* scripts/webserver
	scripts/webserver/pandora_webserver.pl
	scripts/webserver/PandoraFMS_Monitorizacion_Webserver.odt: Added files
	with webserver plugin and documentation.

2011-05-04  Sancho Lerena <slerena@artica.es>

	* scripts/mail_transfer: Added new script to send/receive XML data
	files by SMTP/POP3.

2011-02-22  Ramon Novoa  <rnovoa@artica.es>

	* build_src.sh: Updated to work with the current directory structure.

2010-12-28  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Update the console installer version. Fixed
	  a bug when reading the build number.

2010-12-23  Ramon Novoa  <rnovoa@artica.es>

	* build_src.sh, build_windows_agent.sh,