@@ -1,5 +1,5 @@
 #!/bin/bash
-CODEHOME=~/code/pandora/trunk
+CODEHOME=~/code/branches/pandora_4.0
 CODEHOME_ENT=~/code/artica/code
 RPMHOME=/usr/src/packages
 
@@ -19,10 +19,10 @@ cd $CODEHOME/pandora_server/DEBIAN  && bash ./make_deb_package.sh && mv ../*.deb
 cd $CODEHOME/pandora_agents/unix/DEBIAN && bash ./make_deb_package.sh && mv ../*.deb $RPMHOME/DEB || exit 1
 
 # Enterprise console
-cd $CODEHOME_ENT/pandora/trunk/pandora_console/DEBIAN && bash ./make_deb_package.sh && mv ../*.deb $RPMHOME/DEB || exit 1
+cd $CODEHOME_ENT/pandora/branches/4.0/pandora_console/DEBIAN && bash ./make_deb_package.sh && mv ../*.deb $RPMHOME/DEB || exit 1
 
 # Enterprise server
-cd $CODEHOME_ENT/pandora/trunk/pandora_server/PandoraFMS-Enterprise/DEBIAN && bash ./make_deb_package.sh && mv ../*.deb $RPMHOME/DEB || exit 1
+cd $CODEHOME_ENT/pandora/branches/4.0/pandora_server/PandoraFMS-Enterprise/DEBIAN && bash ./make_deb_package.sh && mv ../*.deb $RPMHOME/DEB || exit 1
 
 exit 0
 
